--- a/index.html
+++ b/index.html
@@ -187,7 +187,10 @@
                     <h2 class="section-heading text-uppercase">Tienda</h2>
                     <h3 class="section-subheading text-muted">Aquí puedes comprar y te lo enviamos a tu casa!</h3>
                 </div>
-
+                <div id="my-store-84900821"></div>
+                <div>
+                    <script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?84900821&data_platform=code&data_date=2023-02-27" charset="utf-8"></script><script type="text/javascript"> xProductBrowser("categoriesPerRow=3","views=grid(20,3) list(60) table(60)","categoryView=grid","searchView=list","id=my-store-84900821");</script>
+                </div>
                 
                 <!--ul class="timeline">
                     <li>
